--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(path_finding)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(path_finding main.cpp source/SquareGridMap.cpp source/SquareGridMapWithWeight.cpp)
+add_executable(path_finding main.cpp sources/SquareGridMap.cpp sources/SquareGridMapWithWeight.cpp)
